# rag-back

./: .envrc  .gitignore  Dockerfile.api  Dockerfile.dev  Dockerfile.tesseract  Dockerfile.worker  Dockerfile.worker.tesseract  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  zappa_settings.json
.github/workflows/: deploy_api.yml
app/: main.py  middleware.py  worker.py
app/core/: config.py  database.py  models.py  validator.py
app/services/: embedding.py  import_text.py  ingestion.py  parser.py  weaviate_client.py
app/services/tests/: test_import_text.py
app/services/utils/: create_schema_wrapper.py
app/tests/: test_api.py
app/utils/: json_helper.py  upload_files_to_s3.py
migrations/: env.py
migrations/versions/: dbe3de9b18ee_initial_migration.py
